{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 6,
  "lineage": "112bb572-4c2f-e285-8752-84f618cd179c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967756262698:internet-gateway/igw-09a7a541ce3eb20b1",
            "id": "igw-09a7a541ce3eb20b1",
            "owner_id": "967756262698",
            "tags": {
              "Name": "IGW-Master"
            },
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "dependencies": [
            "aws_vpc.master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:967756262698:internet-gateway/igw-0633b1e9b7c1ce2bb",
            "id": "igw-0633b1e9b7c1ce2bb",
            "owner_id": "967756262698",
            "tags": {
              "Name": "IGW-Worker"
            },
            "vpc_id": "vpc-09764476e6bca52d2"
          },
          "dependencies": [
            "aws_vpc.worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "master-main-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00980cb42abd71d1b",
            "original_route_table_id": "rtb-074aa26ae191c0171",
            "route_table_id": "rtb-0e9c29a6a2d5d9e72",
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "dependencies": [
            "aws_internet_gateway.igw-master",
            "aws_route_table.master-rt",
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "worker-main-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddb59591bfa48930",
            "original_route_table_id": "rtb-09922d8367268defe",
            "route_table_id": "rtb-013b54282f9bf44b8",
            "vpc_id": "vpc-09764476e6bca52d2"
          },
          "dependencies": [
            "aws_internet_gateway.igw-worker",
            "aws_route_table.worker-rt",
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "master-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967756262698:route-table/rtb-0e9c29a6a2d5d9e72",
            "id": "rtb-0e9c29a6a2d5d9e72",
            "owner_id": "967756262698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a7a541ce3eb20b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0d8c186237bd071be"
              }
            ],
            "tags": {
              "Name": "Master-RT"
            },
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-master",
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "worker-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:967756262698:route-table/rtb-013b54282f9bf44b8",
            "id": "rtb-013b54282f9bf44b8",
            "owner_id": "967756262698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0633b1e9b7c1ce2bb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0d8c186237bd071be"
              }
            ],
            "tags": {
              "Name": "Worker-RT"
            },
            "vpc_id": "vpc-09764476e6bca52d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-worker",
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "master-subnet-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021a78380835b7ed7",
            "route_table_id": "rtb-0e9c29a6a2d5d9e72",
            "subnet_id": "subnet-05b143ea8824674d1"
          },
          "dependencies": [
            "aws_internet_gateway.igw-master",
            "aws_route_table.master-rt",
            "aws_subnet.m-sub-1",
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker",
            "data.aws_availability_zones.azs-m"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "master-subnet-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ea32a8b2abfd8e4",
            "route_table_id": "rtb-0e9c29a6a2d5d9e72",
            "subnet_id": "subnet-07da774b8ee7c76b8"
          },
          "dependencies": [
            "aws_internet_gateway.igw-master",
            "aws_route_table.master-rt",
            "aws_subnet.m-sub-2",
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker",
            "data.aws_availability_zones.azs-m"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "worker-subnet-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d57a2c6a7a316d21",
            "route_table_id": "rtb-013b54282f9bf44b8",
            "subnet_id": "subnet-034b509b418d82d29"
          },
          "dependencies": [
            "aws_internet_gateway.igw-worker",
            "aws_route_table.worker-rt",
            "aws_subnet.w-sub-1",
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker",
            "data.aws_availability_zones.azs-w"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_outside-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967756262698:security-group/sg-091edb3c232307a1f",
            "description": "Allow TLS and http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091edb3c232307a1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "outside",
            "name_prefix": "",
            "owner_id": "967756262698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-traffice-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967756262698:security-group/sg-098385a171ad9b3f7",
            "description": "Allow inbound traffic from ELB on 8080 and Jenkins worker on 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098385a171ad9b3f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic from Jenkins worker on port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "Allow inbound traffic from Jenkins worker",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ELB on 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091edb3c232307a1f"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-master",
            "name_prefix": "",
            "owner_id": "967756262698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffice-elb-jenkins-worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_outside-traffic",
            "aws_vpc.master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-jenkins-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:967756262698:security-group/sg-05634e93342bb0f67",
            "description": "Allow inbound traffic from Jenkins master on 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05634e93342bb0f67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh on 22 from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "Allow all traffice from Subnet-1 elb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-worker",
            "name_prefix": "",
            "owner_id": "967756262698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffice-from-jenkins-master"
            },
            "timeouts": null,
            "vpc_id": "vpc-09764476e6bca52d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967756262698:subnet/subnet-05b143ea8824674d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-05b143ea8824674d1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967756262698",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "dependencies": [
            "aws_vpc.master",
            "data.aws_availability_zones.azs-m"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967756262698:subnet/subnet-07da774b8ee7c76b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-07da774b8ee7c76b8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967756262698",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "dependencies": [
            "aws_vpc.master",
            "data.aws_availability_zones.azs-m"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "w-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:967756262698:subnet/subnet-034b509b418d82d29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-034b509b418d82d29",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "967756262698",
            "tags": {
              "Name": "public-worker-sub-1"
            },
            "tags_all": {
              "Name": "public-worker-sub-1"
            },
            "vpc_id": "vpc-09764476e6bca52d2"
          },
          "dependencies": [
            "aws_vpc.worker",
            "data.aws_availability_zones.azs-w"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967756262698:vpc/vpc-008b04441bf0136cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-081d320d5604ffe9a",
            "default_route_table_id": "rtb-0e9c29a6a2d5d9e72",
            "default_security_group_id": "sg-0a05e66031755a469",
            "dhcp_options_id": "dopt-0f13ae6ff41a29603",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-008b04441bf0136cc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e9c29a6a2d5d9e72",
            "owner_id": "967756262698",
            "tags": {
              "Name": "Master-VPC"
            },
            "tags_all": {
              "Name": "Master-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:967756262698:vpc/vpc-09764476e6bca52d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01e4188b61343ffec",
            "default_route_table_id": "rtb-013b54282f9bf44b8",
            "default_security_group_id": "sg-0eedb8307aafd21a6",
            "dhcp_options_id": "dopt-0b14c23c6c69f99f8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09764476e6bca52d2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-013b54282f9bf44b8",
            "owner_id": "967756262698",
            "tags": {
              "Name": "Worker-VPC"
            },
            "tags_all": {
              "Name": "Worker-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "master-2-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-0d8c186237bd071be",
            "peer_owner_id": "967756262698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-09764476e6bca52d2",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "Master-to-Worker"
            },
            "vpc_id": "vpc-008b04441bf0136cc"
          },
          "dependencies": [
            "aws_vpc.master",
            "aws_vpc.worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0d8c186237bd071be",
            "peer_owner_id": "967756262698",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-09764476e6bca52d2",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-008b04441bf0136cc",
            "vpc_peering_connection_id": "pcx-0d8c186237bd071be"
          },
          "dependencies": [
            "aws_vpc.master",
            "aws_vpc.worker",
            "aws_vpc_peering_connection.master-2-worker"
          ]
        }
      ]
    }
  ]
}